--- a/49_Prevendo_preços_de_imóveis_com_Redes_Neurais.ipynb
+++ b/49_Prevendo_preços_de_imóveis_com_Redes_Neurais.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNN7YjmnQqhSZtLNOdxsrtg",
+      "authorship_tag": "ABX9TyN8WS0OInKwOLWGto+rZh23",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,12 +59,58 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "sM4EkkPWxnPt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sM4EkkPWxnPt",
+        "outputId": "89c5a2ba-aa8e-4a16-da37-7b99a4d66d88"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colab only includes TensorFlow 2.x; %tensorflow_version has no effect.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# importar as bibliotecas necessárias\n",
+        "%tensorflow_version 2.x\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Uma vez importados todos os pacotes necessários, é hora de carregarmos os dados e começarmos o nosso projeto!\n",
+        "\n",
+        "Para isso, utilizaremos um dataset do próprio `sklearn.dataset`, o `California Housing`."
+      ],
+      "metadata": {
+        "id": "Xs3qU6UV1tQT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# baixar os dados\n",
+        "from sklearn.datasets import fetch_california_housing\n",
+        "housing = fetch_california_housing()\n",
+        "feature_names = housing['feature_names']\n",
+        "feature_names.append('Target')"
+      ],
+      "metadata": {
+        "id": "aCG_-2Hq10qn"
+      },
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
