--- a/49_Prevendo_preços_de_imóveis_com_Redes_Neurais.ipynb
+++ b/49_Prevendo_preços_de_imóveis_com_Redes_Neurais.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPytO5gUJ5eb8ChvGoETCPn",
+      "authorship_tag": "ABX9TyNC8MUeDk/wzAcNsuggohGJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -477,6 +477,61 @@
           "execution_count": 3
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Agora sim estamos prontos para, de fato, fazer nossas previsões usando redes neurais.\n",
+        "\n",
+        "Abaixo, podemos ver o código completo, desde a separaç!ão dos dados até o resultado do modelo."
+      ],
+      "metadata": {
+        "id": "quH950gV7HcF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. escolher e importar um modelo\n",
+        "# Rede Neural usando API SEQUENTIAL\n",
+        "\n",
+        "# 3. Separar os dados entre feature matrix e target vector\n",
+        "X = df.drop('Target', axis=1)\n",
+        "y = df['Target']\n",
+        "\n",
+        "# 3.1 Dividir o dataset entre treino e teste\n",
+        "X_train_completo, X_test, y_train_completo, y_test = train_test_split(X, y)\n",
+        "\n",
+        "# 3.2 Dividir os dados de treino entre treino e validação\n",
+        "X_train, X_valid, y_train, y_valid = train_test_split(X_train_completo, y_train_completo)\n",
+        "\n",
+        "# 3.3 Padronizar os dados (MUITO importante para redes neurais)\n",
+        "sc = StandardScaler().fit(X_train)\n",
+        "X_train = sc.transform(X_train)\n",
+        "X_valid = sc.transform(X_valid)\n",
+        "X_test = sc.transform(X_test)\n",
+        "\n",
+        "# 2. Instanciar e escolher os hyperparameters\n",
+        "model = keras.models.Sequential()\n",
+        "model.add(keras.layers.Dense(50, input_shape=(X_train.shape[1:]), activation='relu'))\n",
+        "model.add(keras.layers.Dense(10, activation='relu'))\n",
+        "model.add(keras.layers.Dense(1))\n",
+        "\n",
+        "# 4. Fit do modelo (treinar)\n",
+        "model.compile(optimizer='sgd', loss='mean_squared_error')\n",
+        "history = model.fit(X_train, y_train, epochs=25, validation_data=(X_valid, y_valid))\n",
+        "\n",
+        "# 5. Avaliar o modelo\n",
+        "print(model.evaluate(X_test, y_test))\n",
+        "\n",
+        "# 5.1 Fazer previsões em cima de novos dados\n",
+        "y_pred = model.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "907EYIP37EXT"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
