--- a/49_Prevendo_preços_de_imóveis_com_Redes_Neurais.ipynb
+++ b/49_Prevendo_preços_de_imóveis_com_Redes_Neurais.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNC8MUeDk/wzAcNsuggohGJ",
+      "authorship_tag": "ABX9TyOJ01sAkTimvl6ZXz5xqs0f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -528,10 +528,100 @@
         "y_pred = model.predict(X_test)"
       ],
       "metadata": {
-        "id": "907EYIP37EXT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "907EYIP37EXT",
+        "outputId": "9223d444-762f-4b11-a986-68792e865ca5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/25\n",
+            "363/363 [==============================] - 3s 6ms/step - loss: 0.7381 - val_loss: 0.4859\n",
+            "Epoch 2/25\n",
+            "363/363 [==============================] - 2s 5ms/step - loss: 0.4653 - val_loss: 0.4269\n",
+            "Epoch 3/25\n",
+            "363/363 [==============================] - 2s 5ms/step - loss: 0.4276 - val_loss: 0.4941\n",
+            "Epoch 4/25\n",
+            "363/363 [==============================] - 2s 4ms/step - loss: 0.4762 - val_loss: 0.5189\n",
+            "Epoch 5/25\n",
+            "363/363 [==============================] - 2s 4ms/step - loss: 0.6352 - val_loss: 0.4359\n",
+            "Epoch 6/25\n",
+            "363/363 [==============================] - 1s 4ms/step - loss: 0.4528 - val_loss: 0.3864\n",
+            "Epoch 7/25\n",
+            "363/363 [==============================] - 1s 3ms/step - loss: 0.3744 - val_loss: 0.3734\n",
+            "Epoch 8/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3630 - val_loss: 0.3595\n",
+            "Epoch 9/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3541 - val_loss: 0.3476\n",
+            "Epoch 10/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3481 - val_loss: 0.3495\n",
+            "Epoch 11/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3437 - val_loss: 0.3419\n",
+            "Epoch 12/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3395 - val_loss: 0.3383\n",
+            "Epoch 13/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3362 - val_loss: 0.3312\n",
+            "Epoch 14/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3335 - val_loss: 0.3428\n",
+            "Epoch 15/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3300 - val_loss: 0.3394\n",
+            "Epoch 16/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3268 - val_loss: 0.3331\n",
+            "Epoch 17/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3246 - val_loss: 0.3273\n",
+            "Epoch 18/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3226 - val_loss: 0.3245\n",
+            "Epoch 19/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3189 - val_loss: 0.3241\n",
+            "Epoch 20/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3145 - val_loss: 0.3181\n",
+            "Epoch 21/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3123 - val_loss: 0.3171\n",
+            "Epoch 22/25\n",
+            "363/363 [==============================] - 1s 3ms/step - loss: 0.3110 - val_loss: 0.3196\n",
+            "Epoch 23/25\n",
+            "363/363 [==============================] - 1s 3ms/step - loss: 0.3085 - val_loss: 0.3124\n",
+            "Epoch 24/25\n",
+            "363/363 [==============================] - 1s 3ms/step - loss: 0.3065 - val_loss: 0.3124\n",
+            "Epoch 25/25\n",
+            "363/363 [==============================] - 1s 2ms/step - loss: 0.3052 - val_loss: 0.3065\n",
+            "162/162 [==============================] - 0s 1ms/step - loss: 0.3377\n",
+            "0.33770182728767395\n",
+            "162/162 [==============================] - 0s 1ms/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ATENÇÃO para o shape do input\n",
+        "print(X_train.shape[1])\n",
+        "print(X_train.shape[1:])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mW3Uptty7NHq",
+        "outputId": "23a9e7cf-d1e7-4392-c512-98265f3d1642"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "(8,)\n"
+          ]
+        }
+      ]
     }
   ]
 }
