--- a/49_Prevendo_preços_de_imóveis_com_Redes_Neurais.ipynb
+++ b/49_Prevendo_preços_de_imóveis_com_Redes_Neurais.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJ01sAkTimvl6ZXz5xqs0f",
+      "authorship_tag": "ABX9TyNa8N+VEnlCEYUv8RlJhP8y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -622,6 +622,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra: Prevendo preços de imóveis com Redes Neurais**\n",
+        "\n",
+        "Agora que já estamos introduzidos ao mundo do Deep Learning e Redes Neurais, e estamos familiarizados com as ferramentas necessárias, é hora de botarmos a mão na massa para um exemplo de regressão usando redes neurais."
+      ],
+      "metadata": {
+        "id": "QrXXhBGy7ojC"
+      }
     }
   ]
 }
