--- a/50_Visão_geral_do_projeto_Fake_News.ipynb
+++ b/50_Visão_geral_do_projeto_Fake_News.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsxB6W6l+FbbtxqJ+QsTqp",
+      "authorship_tag": "ABX9TyPhff/OWVp/9QIqKDguzhv/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,6 +88,57 @@
       ],
       "metadata": {
         "id": "n-Gm3NF5-ps5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# importando os pacotes necessarios\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "%tensorflow_version 2.x\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "\n",
+        "# configurando o noteebook\n",
+        "np.random.seed(42)\n",
+        "sns.set_style()\n",
+        "\n",
+        "# filtrar mensagens de warning\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a-vGO6hK-tog",
+        "outputId": "dd2297af-f0a7-46ee-b4f6-c77e37fa2c00"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colab only includes TensorFlow 2.x; %tensorflow_version has no effect.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ATENÇÃO\n",
+        "\n",
+        "O conjunto de dados deste notebook não está mais disponível.\n",
+        "\n",
+        "Para realizar a sua versão do projeto, [clique aqui e faça o download do conjunto de dados](https://www.kaggle.com/competitions/fake-news/data)."
+      ],
+      "metadata": {
+        "id": "hjhTX6tS-52A"
       }
     },
     {
