--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3fqrFKh0O8ug9E3O7xVU3",
+      "authorship_tag": "ABX9TyMzQgl7k0ZLYzUalYCfZTot",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,40 @@
       ],
       "metadata": {
         "id": "6kvkv-ST2C5M"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Metodologia para Data Science**\n",
+        "\n",
+        "Pense no processo de Machine Learning como um experimento. Colocar um pouco de método, vai te ajudar tremendamente a construir projetos de Data Science.\n",
+        "\n",
+        "Defina o objeto da pesquisa\n",
+        "\n",
+        "Faça uma hipótese\n",
+        "\n",
+        "Colete dados\n",
+        "\n",
+        "Teste sua hipótese\n",
+        "\n",
+        "Analise seus resultados\n",
+        "\n",
+        "Chegue a uma conclusão\n",
+        "\n",
+        "Refine a hipótese e repita o processo\n",
+        "\n",
+        "\n",
+        "## **Referências**\n",
+        "\n",
+        "[Introduction to Machine Learning Problem Framing](https://developers.google.com/machine-learning/problem-framing)\n",
+        "\n",
+        "[The ML Mindset](https://developers.google.com/machine-learning/problem-framing/big-questions)\n",
+        "\n",
+        "[Best Practices for ML Engineering](https://developers.google.com/machine-learning/guides/rules-of-ml)"
+      ],
+      "metadata": {
+        "id": "byBrEJjkA_oW"
       }
     },
     {
