--- a/50_Visão_geral_do_projeto_Fake_News.ipynb
+++ b/50_Visão_geral_do_projeto_Fake_News.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQPdUYsL/mUqn0omL4v0JA",
+      "authorship_tag": "ABX9TyOK+ePKUflOXCrnrxA8GBwp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,7 +117,7 @@
         "id": "a-vGO6hK-tog",
         "outputId": "50ca6194-fb19-4674-d7f8-ab620531fc16"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -243,7 +243,7 @@
         "id": "BaYml3kM_X6B",
         "outputId": "5d127d33-2966-44d8-8b0d-7f57192aa07e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -288,7 +288,7 @@
         "id": "tlL5LZ3l_c3n",
         "outputId": "35efcb28-1892-4e8f-8b91-f9bc3fddbb7c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -362,7 +362,7 @@
         "id": "DIKgzWVO_vd3",
         "outputId": "6263933e-371a-487d-d0f4-30f8a426b11a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -393,7 +393,7 @@
         "id": "yC2gEo_9_xrm",
         "outputId": "54c2b02a-a8da-4cf9-90af-bad88c85b446"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,7 +453,7 @@
         "id": "VPvtF0Bw_4IO",
         "outputId": "af0f0d61-6b9b-496c-89e3-0293c720a9b0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -501,7 +501,7 @@
         "id": "S_-7ocux_9Ki",
         "outputId": "f9311deb-9431-4086-fd4a-464281f8f717"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -544,7 +544,7 @@
         "id": "e55ajI6pABj3",
         "outputId": "822dee75-1a6b-4a8d-ba18-fda2998bb6b3"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -573,7 +573,7 @@
         "id": "IKe38biZAD5X",
         "outputId": "156f1a2b-3a05-4347-a694-0e7872a0b58c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -602,7 +602,7 @@
         "id": "dkhEOJZhAF_O",
         "outputId": "968bf4d8-7f8e-4465-93b5-119ec74dbbaa"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -632,7 +632,7 @@
         "id": "jo1wXuh5AIER",
         "outputId": "c172e1fb-97a6-497a-ce7b-8738820e6130"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -657,6 +657,19 @@
       ],
       "metadata": {
         "id": "slpJ1v-LAQfN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Projeto - Classificador de Fake News**\n",
+        "\n",
+        "Agora que você já sabe o que são Fake News, o problema que elas trazem e uma ferramenta para combatê-las, é hora de botar a mão na massa e criar seu próprio Classificador de Fake News.\n",
+        "\n",
+        "ATENÇÃO! [Clique aqui para fazer o download do conjunto de dados](https://www.kaggle.com/competitions/fake-news/data)."
+      ],
+      "metadata": {
+        "id": "x4M4wrv0BX_b"
       }
     }
   ]
