--- a/51_Git_e_GitHub.ipynb
+++ b/51_Git_e_GitHub.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHUzsxWve1Q/iakRA69twR",
+      "authorship_tag": "ABX9TyNk821NYrr2jF5NkkUzyw44",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,14 +39,53 @@
         "\n",
         "Links úteis:\n",
         "\n",
-        "Documentação Oficial Git\n",
+        "[Documentação Oficial Git](https://git-scm.com/)\n",
         "\n",
-        "Download Git\n",
+        "[Download Git](https://git-scm.com/downloads)\n",
         "\n",
-        "Cheat Sheet de Git"
+        "[Cheat Sheet de Git](https://education.github.com/git-cheat-sheet-education.pdf)"
       ],
       "metadata": {
         "id": "TGHGS4XwCGSr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Conheça o GitHub**\n",
+        "\n",
+        "Qual a diferença entre Git e GitHub? Aqui você entende como podemos utilizar essa poderosa combinação em nossos projetos.\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[Documentação Oficial Git](https://git-scm.com/)\n",
+        "\n",
+        "[Download Git](https://git-scm.com/downloads)\n",
+        "\n",
+        "[Cheat Sheet de Git](https://education.github.com/git-cheat-sheet-education.pdf)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "p7d7XX3oC0Kd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Configurando o Git para o seu primeiro Commit**\n",
+        "\n",
+        "Vamos colocar a mão na massa e realizar o nosso primeiro Commit!\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[Documentação Oficial Git](https://git-scm.com/)\n",
+        "\n",
+        "[Download Git](https://git-scm.com/downloads)\n",
+        "\n",
+        "[Cheat Sheet de Git](https://education.github.com/git-cheat-sheet-education.pdf)"
+      ],
+      "metadata": {
+        "id": "G6b3u9JlC_LK"
       }
     },
     {
