--- a/51_Git_e_GitHub.ipynb
+++ b/51_Git_e_GitHub.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNk821NYrr2jF5NkkUzyw44",
+      "authorship_tag": "ABX9TyORobjZFrLCxVN0OWUAOelB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,6 +86,25 @@
       ],
       "metadata": {
         "id": "G6b3u9JlC_LK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Entendendo Branches e restaurando Commits**\n",
+        "\n",
+        "Aprenda o que são Branches, e como recuperar Commits anteriores.\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[Documentação Oficial Git](https://git-scm.com/)\n",
+        "\n",
+        "[Download Git](https://git-scm.com/downloads)\n",
+        "\n",
+        "[Cheat Sheet de Git](https://education.github.com/git-cheat-sheet-education.pdf)"
+      ],
+      "metadata": {
+        "id": "SDihZJQ-Dawb"
       }
     },
     {
