--- a/51_Git_e_GitHub.ipynb
+++ b/51_Git_e_GitHub.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORobjZFrLCxVN0OWUAOelB",
+      "authorship_tag": "ABX9TyNwe82gQzmnefluMMjiImfM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,6 +105,27 @@
       ],
       "metadata": {
         "id": "SDihZJQ-Dawb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Conectando o repositório local ao GitHub**\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[Generate SSH Key](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent)\n",
+        "\n",
+        "Add SSH Key\n",
+        "\n",
+        "[Documentação Oficial Git](https://git-scm.com/)\n",
+        "\n",
+        "[Download Git](https://git-scm.com/downloads)\n",
+        "\n",
+        "[Cheat Sheet de Git](https://education.github.com/git-cheat-sheet-education.pdf)"
+      ],
+      "metadata": {
+        "id": "WlV7kwJ5D_BE"
       }
     },
     {
