--- a/51_Git_e_GitHub.ipynb
+++ b/51_Git_e_GitHub.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwe82gQzmnefluMMjiImfM",
+      "authorship_tag": "ABX9TyP8RmYKkhK3K1vVjpJzpVB8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,7 +116,7 @@
         "\n",
         "[Generate SSH Key](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent)\n",
         "\n",
-        "Add SSH Key\n",
+        "[Add SSH Key](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/adding-a-new-ssh-key-to-your-github-account)\n",
         "\n",
         "[Documentação Oficial Git](https://git-scm.com/)\n",
         "\n",
@@ -126,6 +126,21 @@
       ],
       "metadata": {
         "id": "WlV7kwJ5D_BE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Conheça o Repositório do Sigmoidal**\n",
+        "\n",
+        "[Clique aqui para acessar o repositório](https://github.com/carlosfab/data-science-na-pratica)\n",
+        "\n",
+        "Conheça o repositório do Data Science na Prática: Todos os materiais do Data Science na Prática, organizados em um só lugar!\n",
+        "\n",
+        "A partir de agora, acessar e estudar os materiais do Sigmoidal ficou mais fácil! Assista aos tutoriais, e entenda como ter acesso a todos os materiais do Sigmoidal!"
+      ],
+      "metadata": {
+        "id": "kg589PAGEdmz"
       }
     },
     {
