--- a/51_Git_e_GitHub.ipynb
+++ b/51_Git_e_GitHub.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8RmYKkhK3K1vVjpJzpVB8",
+      "authorship_tag": "ABX9TyP3nQL1IzN5aShy1/lT3CAK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -141,6 +141,17 @@
       ],
       "metadata": {
         "id": "kg589PAGEdmz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Conectando ao GitHub**\n",
+        "\n",
+        "[Clique aqui para acessar o repositório](https://github.com/carlosfab/data-science-na-pratica)"
+      ],
+      "metadata": {
+        "id": "K6sdX0x6Ettx"
       }
     },
     {
