--- a/52_Limpeza_de_dados,_outliers_e_valores_ausentes.ipynb
+++ b/52_Limpeza_de_dados,_outliers_e_valores_ausentes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/Q3QHPn5reZoUHQVqJYb4",
+      "authorship_tag": "ABX9TyPIDbgrhfcCKrscS4yYudSX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -584,12 +584,12 @@
         "df.tail()"
       ],
       "metadata": {
-        "id": "UDXLQtRispUs",
-        "outputId": "d2e119ff-f6b8-43a2-d9e7-d844255e3839",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        }
+        },
+        "id": "UDXLQtRispUs",
+        "outputId": "d2e119ff-f6b8-43a2-d9e7-d844255e3839"
       },
       "execution_count": 3,
       "outputs": [
@@ -1026,6 +1026,33 @@
           },
           "metadata": {},
           "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# modificando o tipo\n",
+        "df.lesao_corp_morte[343].astype('int64')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nlSr9UArs34U",
+        "outputId": "add48a07-4629-48e1-ae4f-d89813a214c1"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
         }
       ]
     }
